@@ -27,6 +27,10 @@ public class GroupService {
     private FormRepository formRepository;
     @Autowired
     private LevelRepository levelRepository;
+    @Autowired
+    private UserRepository userRepository;
+    @Autowired
+    private NotificationsService notificationsService;
 
     public void createGroup(GroupCreateDTO dto) {
         Group group = new Group();
@@ -105,7 +109,11 @@ public class GroupService {
     }
 
     public String addCuratorToGroup(Integer groupId, Integer curatorId) {
+        String groupName;
         Group group = groupRepository.findById(groupId).orElse(null);
+
+        Optional<Group> groupOptional = groupRepository.findById(groupId);
+        groupName = this.convertToGroupDTO(groupOptional.get()).getName();
 
         if (group == null) {
             return "Группа не найдена.";
@@ -115,6 +123,7 @@ public class GroupService {
         if (group.getCurator() != null && !group.getCurator().equals(curatorId)) {
             group.setCurator(curatorId);
             groupRepository.save(group);
+            notificationsService.createCuratorChangeNotification(groupName);
             return "Группа была успешно передана новому куратору.";
         }
 
@@ -127,6 +136,7 @@ public class GroupService {
         if (group.getCurator() == null) {
             group.setCurator(curatorId);
             groupRepository.save(group);
+            notificationsService.createCuratorChangeNotification(groupName);
             return "Группа была успешно добавлена вашему куратору.";
         }
 
@@ -156,7 +166,27 @@ public class GroupService {
         return "Неизвестная ошибка.";
     }
 
+    public void updateGroupInfo(Integer groupId, Integer starosta, Integer proforg, String newDescription) {
+        Group group = groupRepository.findById(groupId)
+                .orElseThrow(() -> new RuntimeException("Группа не найдена"));
 
+        System.out.println("Before update - Description: " + group.getDescription()); // Лог
+
+        if (starosta != null) {
+            group.setLeader(starosta);
+        }
+        if (proforg != null) {
+            group.setOrganizer(proforg);
+        }
+        if (newDescription != null && !newDescription.isEmpty()) {
+            group.setDescription(newDescription);
+        }
+
+        System.out.println("After update - Description: " + group.getDescription()); // Лог
+
+        Group saved = groupRepository.save(group);
+        System.out.println("Saved entity - Description: " + saved.getDescription()); // Лог
+    }
     public Optional<Group> getGroupById(Integer groupId) {
         return groupRepository.findById(groupId);
     }
@@ -167,11 +197,46 @@ public class GroupService {
                 .toList();
     }
 
-    public List<GroupAllDTO> getGroupDTOsByCuratorId(Integer curatorId) {
-        return groupRepository.findByCurator(curatorId)
+    public List<GroupUpdateDTO> getGroupUpdateByCuratorId(Integer id) {
+        return groupRepository.findByCurator(id)
                 .stream()
-                .map(this::convertToGroupAllDTO)
-                .collect(Collectors.toList());
+                .map(this::toGroupUpdateDTO)
+                .toList();
+    }
+
+    public GroupUpdateDTO getGroupUpdateByGroupId(Integer groupId) {
+        Group group = groupRepository.findById(groupId)
+                .orElseThrow(() -> new RuntimeException("Группа не найдена"));
+
+        return toGroupUpdateDTO(group);
+    }
+
+
+    public GroupUpdateDTO toGroupUpdateDTO(Group group) {
+        User leader = null;
+        User organizer = null;
+
+        if (group.getLeader() != null) {
+            leader = userRepository.findById(group.getLeader()).orElse(null);
+        }
+        if (group.getOrganizer() != null) {
+            organizer = userRepository.findById(group.getOrganizer()).orElse(null);
+        }
+
+        String leaderName = (leader != null)
+                ? leader.getSurname() + " " + leader.getName() + " " + leader.getPatronymic()
+                : null;
+
+        String organizerName = (organizer != null)
+                ? organizer.getSurname() + " " + organizer.getName() + " " + organizer.getPatronymic()
+                : null;
+
+        return GroupUpdateDTO.builder()
+                .id(group.getId())
+                .leaderFullName(leaderName)
+                .organizerFullName(organizerName)
+                .description(group.getDescription())
+                .build();
     }
 
     private GroupCreateDTO convertToDTO(Group g) {
